plugins {
    id 'application'
}

group 'org.silknow'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    jcenter()
    maven { url 'https://jitpack.io' }
    flatDir {
        dirs 'libs'
    }
}

wrapper {
    gradleVersion = '5.0'
}

dependencies {
    implementation 'info.picocli:picocli:3.8.0',
            'com.google.code.gson:gson:2.8.5',
            'com.moparisthebest:junidecode:0.1.1',
            'org.slf4j:slf4j-api:1.7.25',
            'org.slf4j:slf4j-simple:1.7.25',
            'org.jetbrains:annotations:13.0',
            'org.apache.jena:apache-jena-libs:3.1.0',
            'org.apache.poi:poi:3.17',
            'javax.xml.bind:jaxb-api:2.3.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}


application {
    mainClassName = "org.silknow.converter.Main"
}
